Add job parameters
